Fixed Skill Badge Wrapping Bugs

--- a/src/styles/Badge.css
+++ b/src/styles/Badge.css
@@ -5,6 +5,7 @@
 .badge-text {
   padding: 0.5em;
   color: #f5f5f5;
+  white-space: nowrap;
   background-color: #212121;
   border: 1px solid #f5f5f5;
   border-radius: 2px;
