--- a/src/styles/ExperiencePage.css
+++ b/src/styles/ExperiencePage.css
@@ -8,6 +8,7 @@
 
 .skills-container {
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
   margin-bottom: 1%;
 }
